--- a/src/main/resources/static/view/index.html
+++ b/src/main/resources/static/view/index.html
@@ -5,92 +5,94 @@
     <title>Поиск</title>
 </head>
 <body class="page page_index  page_no-touch" ng-app="bar">
-    <div class="page-wrapper" ng-controller="SearchController">
-        <div class="page_container _topline">
-            <header class="header">
-                <div class="banner _Billboard"></div>
-                <section class="topline">
-                    <div class="topline-top"></div>
-                    <div class="topline-bottom">
-                        <nav>
-                                <span class="topline-bottom-link">
-                                    <a href="https://www.afisha.ru/msk/cinema/" sl-processed="1">КИНО</a>
-                                </span>
+<div class="page-wrapper" ng-controller="SearchController">
+    <div class="page_container _topline">
+        <header class="header">
+            <div class="banner _Billboard"></div>
+            <section class="topline">
+                <div class="topline-top"></div>
+                <div class="topline-bottom">
+                    <nav>
                             <span class="topline-bottom-link">
-                                <a href="https://www.afisha.ru/msk/concerts/" sl-processed="1">КОНЦЕРТЫ</a>
-                                </span>
-                            <span class="topline-bottom-link">
-                                    <a href="https://www.afisha.ru/msk/theatre/" sl-processed="1">ТЕАТР</a>
-                                </span>
-                            <span class="topline-bottom-link">
-                                    <a href="https://www.afisha.ru/msk/exhibitions/" sl-processed="1">ВЫСТАВКИ</a>
-                                </span>
-                            <span class="topline-bottom-link">
-                                    <a href="https://www.afisha.ru/msk/kids/" sl-processed="1">ДЕТИ</a>
-                                </span>
-                            <span class="topline-bottom-link _active">
-                                    <a href="https://www.afisha.ru/msk/restaurants/" sl-processed="1">РЕСТОРАНЫ</a>
-                                </span>
-                            <span class="topline-bottom-link">
-                                    <a href="https://www.afisha.ru/msk/quests/" sl-processed="1">КВЕСТЫ</a>
-                                </span>
-                            <span class="topline-bottom-link">
-                                    <a href="https://www.afisha.ru/selection/" sl-processed="1">ПОДБОРКИ</a>
-                                </span>
-                            <span class="topline-bottom-link">
-                                    <a href="https://www.afisha.ru/" sl-processed="1">ВСЕ</a>
-                                </span>
-                        </nav>
-                        <span class="topline-bottom-link _choice">
-                                <a href="/msk/restaurants/restaurant_list/thebest/" class="topline-bottom-choice"
-                                   data-text="Лучшее в Москве" sl-processed="1">
-                                    <i class="label _normal _white"></i>
-                                </a>
+                                <a href="https://www.afisha.ru/msk/cinema/" sl-processed="1">КИНО</a>
                             </span>
-                    </div>
-                </section>
-            </header>
-        </div>
-        <div class="page_container _search">
-            <div class="rootblock" id="suggest-root">
-                <div class="c8e9d27b__form-fonts">
-                    <form class="_5b3132fe__form-form">
-                        <input type="text" class="_642e2d74__input-input"
-                               placeholder="Поиск по названию, типу кухни или расположению" value="" ng-model="barName">
-                        <button class="c6c8b68d__button-button" type="submit" ng-click="findBarByName()">найти</button>
-                    </form>
+                        <span class="topline-bottom-link">
+                                <a href="https://www.afisha.ru/msk/concerts/" sl-processed="1">КОНЦЕРТЫ</a>
+                            </span>
+                        <span class="topline-bottom-link">
+                                <a href="https://www.afisha.ru/msk/theatre/" sl-processed="1">ТЕАТР</a>
+                            </span>
+                        <span class="topline-bottom-link">
+                                <a href="https://www.afisha.ru/msk/exhibitions/" sl-processed="1">ВЫСТАВКИ</a>
+                            </span>
+                        <span class="topline-bottom-link">
+                                <a href="https://www.afisha.ru/msk/kids/" sl-processed="1">ДЕТИ</a>
+                            </span>
+                        <span class="topline-bottom-link _active">
+                                <a href="https://www.afisha.ru/msk/restaurants/" sl-processed="1">РЕСТОРАНЫ</a>
+                            </span>
+                        <span class="topline-bottom-link">
+                                <a href="https://www.afisha.ru/msk/quests/" sl-processed="1">КВЕСТЫ</a>
+                            </span>
+                        <span class="topline-bottom-link">
+                                <a href="https://www.afisha.ru/selection/" sl-processed="1">ПОДБОРКИ</a>
+                            </span>
+                        <span class="topline-bottom-link">
+                                <a href="https://www.afisha.ru/" sl-processed="1">ВСЕ</a>
+                            </span>
+                    </nav>
+                    <span class="topline-bottom-link _choice">
+                            <a href="/msk/restaurants/restaurant_list/thebest/" class="topline-bottom-choice"
+                               data-text="Лучшее в Москве" sl-processed="1">
+                                <i class="label _normal _white"></i>
+                            </a>
+                        </span>
                 </div>
+            </section>
+        </header>
+    </div>
+    <div class="page_container _search">
+        <div class="rootblock" id="suggest-root">
+            <div class="c8e9d27b__form-fonts">
+                <form class="_5b3132fe__form-form">
+                    <input type="text" class="_642e2d74__input-input"
+                           placeholder="Поиск по названию, типу кухни или расположению" value="" ng-model="barName">
+                    <button class="c6c8b68d__button-button" type="submit" ng-click="findBarByName()">найти</button>
+                </form>
             </div>
         </div>
-        <div id="content">
-            <div class="page_container">
-                <div class="page_container_left _container-search">
-                    <div class="search_header">
-                        <div class="search_header_text">
-                            <h1>Кафе и рестораны Москвы</h1>
-                        </div>
+    </div>
+    <div id="content">
+        <div class="page_container">
+            <div class="page_container_left _container-search">
+                <div class="search_header">
+                    <div class="search_header_text">
+                        <h1>Кафе и рестораны Москвы</h1>
                     </div>
-                    <section class="search j-list-container">
-                        <div class="page_container">
-                            <div class="results">
-                                <div class="results_text">
-                                    <h2>Найдено {{allBarsCount}} ресторана</h2>
-                                </div>
+                </div>
+                <section class="search j-list-container">
+                    <div class="page_container">
+                        <div class="results">
+                            <div class="results_text">
+                                <h2>Найдено {{allBarsCount}} заведений</h2>
                             </div>
                         </div>
-                        <section class="search_results">
-                            <ul class="list s-search-rests j-list-wrapper _cards " data-minwidth="630">
-                                <li class="list_item j-first-item" ng-repeat="bar in allBars">
-                                    <!-- шаблон для отображения карточками -->
-                                    <span class="places_cards">
+                    </div>
+                    <section class="search_results">
+                        <ul class="list s-search-rests j-list-wrapper _cards " data-minwidth="630">
+                            <li class="list_item j-first-item" ng-repeat="bar in allBars">
+                                <!-- шаблон для отображения карточками -->
+                                <span class="places_cards">
                                         <div class="places_info">
                                             <h2 class="places_title">
-                                                <a href="/msk/restaurant/{{bar.id}}/" class="places_link" sl-processed="1">
+                                                <a href="/msk/restaurant/{{bar.id}}/" class="places_link"
+                                                   sl-processed="1">
                                                     <span class="places_name">{{bar.name}}</span>
                                                 </a>
                                                 <ul class="places-tag_items">
                                                     <li class="places_cuisine places-tag_item">
-                                                        <a href="/msk/restaurants/restaurant_list/fastfood/" sl-processed="1">Бар</a>
+                                                        <a href="/msk/restaurants/restaurant_list/fastfood/"
+                                                           sl-processed="1">{{bar.type}}</a>
                                                     </li>
                                                 </ul>
                                             </h2>
@@ -99,19 +101,20 @@
                                                 <span class="places_contact">
                                                     <span class="places_address">{{bar.address}}</span>
                                                     <span class="places_metro">{{bar.district}}</span>
-                                                    <span class="places_phone">{{bar.publicPhone}}</span>
+                                                    <span class="places_phone">{{bar.publicPhone}}</span><br>
+                                                    <span class="places_sit_count">Посадочных мест {{bar.sitCount}}</span>
                                                 </span>
                                             </a>
                                         </div>
                                     </span>
-                                </li>
-                            </ul>
-                        </section>
+                            </li>
+                        </ul>
                     </section>
-                </div>
+                </section>
             </div>
-        </div >
+        </div>
     </div>
+</div>
 </body>
 <script src="../js/lib/angular.min.js"></script>
 <script src="../js/lib/ui-bootstrap-tpls-2.5.0.min.js"></script>
@@ -119,7 +122,5 @@
 <script src="../js/app/BarService.js"></script>
 <script src="../js/app/SearchController.js"></script>
 <link rel="stylesheet" href="../css/lib/bootstrap.min.css"/>
-<link rel="stylesheet" href="../css/app/app.css"/>
-<link rel="stylesheet" href="../css/app/app1.css"/>
 <link rel="stylesheet" href="../css/app/header.css"/>
 </html>
