--- a/src/main/resources/static/view/index.html
+++ b/src/main/resources/static/view/index.html
@@ -14,36 +14,36 @@
                 <div class="topline-bottom">
                     <nav>
                             <span class="topline-bottom-link">
-                                <a href="https://www.afisha.ru/msk/cinema/" sl-processed="1">КИНО</a>
+                                <a href="/msk/cinema/">КИНО</a>
                             </span>
                         <span class="topline-bottom-link">
-                                <a href="https://www.afisha.ru/msk/concerts/" sl-processed="1">КОНЦЕРТЫ</a>
+                                <a href="/msk/concerts/">КОНЦЕРТЫ</a>
                             </span>
                         <span class="topline-bottom-link">
-                                <a href="https://www.afisha.ru/msk/theatre/" sl-processed="1">ТЕАТР</a>
+                                <a href="/msk/theatre/">ТЕАТР</a>
                             </span>
                         <span class="topline-bottom-link">
-                                <a href="https://www.afisha.ru/msk/exhibitions/" sl-processed="1">ВЫСТАВКИ</a>
+                                <a href="/msk/exhibitions/">ВЫСТАВКИ</a>
                             </span>
                         <span class="topline-bottom-link">
-                                <a href="https://www.afisha.ru/msk/kids/" sl-processed="1">ДЕТИ</a>
+                                <a href="/msk/kids/">ДЕТИ</a>
                             </span>
                         <span class="topline-bottom-link _active">
-                                <a href="https://www.afisha.ru/msk/restaurants/" sl-processed="1">РЕСТОРАНЫ</a>
+                                <a href="/msk/restaurants/">РЕСТОРАНЫ</a>
                             </span>
                         <span class="topline-bottom-link">
-                                <a href="https://www.afisha.ru/msk/quests/" sl-processed="1">КВЕСТЫ</a>
+                                <a href="/msk/quests/">КВЕСТЫ</a>
                             </span>
                         <span class="topline-bottom-link">
-                                <a href="https://www.afisha.ru/selection/" sl-processed="1">ПОДБОРКИ</a>
+                                <a href="/selection/">ПОДБОРКИ</a>
                             </span>
                         <span class="topline-bottom-link">
-                                <a href="https://www.afisha.ru/" sl-processed="1">ВСЕ</a>
+                                <a href="/">ВСЕ</a>
                             </span>
                     </nav>
                     <span class="topline-bottom-link _choice">
                             <a href="/msk/restaurants/restaurant_list/thebest/" class="topline-bottom-choice"
-                               data-text="Лучшее в Москве" sl-processed="1">
+                               data-text="Лучшее в Москве">
                                 <i class="label _normal _white"></i>
                             </a>
                         </span>
@@ -85,19 +85,17 @@
                                 <span class="places_cards">
                                         <div class="places_info">
                                             <h2 class="places_title">
-                                                <a href="/msk/restaurant/{{bar.id}}/" class="places_link"
-                                                   sl-processed="1">
+                                                <a href="/msk/restaurant/{{bar.id}}/" class="places_link">
                                                     <span class="places_name">{{bar.name}}</span>
                                                 </a>
                                                 <ul class="places-tag_items">
                                                     <li class="places_cuisine places-tag_item">
-                                                        <a href="/msk/restaurants/restaurant_list/fastfood/"
-                                                           sl-processed="1">{{bar.type}}</a>
+                                                        <a href="/msk/restaurants/restaurant_list/fastfood/">{{bar.type}}</a>
                                                     </li>
                                                 </ul>
                                             </h2>
                                             <span class="places_contact">Москва</span>
-                                            <a href="/msk/restaurant/{{bar.id}}/" class="places_link" sl-processed="1">
+                                            <a href="/msk/restaurant/{{bar.id}}/" class="places_link">
                                                 <span class="places_contact">
                                                     <span class="places_address">{{bar.address}}</span>
                                                     <span class="places_metro">{{bar.district}}</span>
