fix script, add method for page redirect

--- a/src/main/resources/static/view/index.html
+++ b/src/main/resources/static/view/index.html
@@ -85,7 +85,7 @@
                                 <span class="places_cards">
                                         <div class="places_info">
                                             <h2 class="places_title">
-                                                <a href="/msk/restaurant/{{bar.id}}/" class="places_link">
+                                                <a href="/api/restaurant/{{bar.id}}/" class="places_link">
                                                     <span class="places_name">{{bar.name}}</span>
                                                 </a>
                                                 <ul class="places-tag_items">
@@ -95,7 +95,7 @@
                                                 </ul>
                                             </h2>
                                             <span class="places_contact">Москва</span>
-                                            <a href="/msk/restaurant/{{bar.id}}/" class="places_link">
+                                            <a href="/api/restaurant/{{bar.id}}/" class="places_link">
                                                 <span class="places_contact">
                                                     <span class="places_address">{{bar.address}}</span>
                                                     <span class="places_metro">{{bar.district}}</span>
